--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudfare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <link rel="stylesheet" href="css/bootstrap-grid.css" type="text/css">
@@ -12,9 +13,11 @@
   </head>
 
   <body>
+     <script src="sketch.js"></sketch>
+     // <!--cdnjs.cloudfare-->
     <nav>
       <ul>
-        <li><a href="#contact">contact</a></li>
+        <li><a href="#contact">contact you are a chicken</a></li>
         <li>works</li>
         <li>experience</li>
         <li class="empty"></li>
